--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -21,6 +21,6 @@ test:
 production:
   clients:
     default:
-      url: <%= ENV['MONGOLAB_URI'] %>
+      uri: <%= ENV['MONGOLAB_URI'] %>
       options:
         connect_timeout: 15
